Fixed overflowing content

--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -170,12 +170,9 @@
         background-color: rgba(white, 0.1);
         border-radius: 15px;
         color: white;
-        padding: 0.1rem 0;
-        width: 23%;
+        padding: 0.1rem 0.5rem;
+        flex-grow: 1;
         text-align: center;
-        @include desktop {
-            width: 15%;
-        }
     }
     &__detail {
         font-size: 14px;
